i added a new pistol

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,14 @@ Assets/Settings/PC_RPAsset.asset
 /Assets/Settings
 *.unity
 /Assets/Settings
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Roughness.png.meta
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Normal_OpenGL.png.meta
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Normal_OpenGL.png
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Metallic.png.meta
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Metallic.png
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Base_Color.png.meta
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Base_Color.png
+Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Roughness.png
+Assets/hk-47-pistol-version-1/textures.meta
+Assets/hk-47-pistol-version-1/source/animated.fbx.meta
+Assets/hk-47-pistol-version-1/source/animated.fbx
