i fixed my stuff and im adding settings that works more better

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ Assets/hk-47-pistol-version-1/textures/DefaultMaterial_Roughness.png
 Assets/hk-47-pistol-version-1/textures.meta
 Assets/hk-47-pistol-version-1/source/animated.fbx.meta
 Assets/hk-47-pistol-version-1/source/animated.fbx
+/Assets/Ready Player Me/Resources
+/Assets/Convai/Tutorials/Settings
+/Assets/Convai/Tutorials
+/Assets/Convai
+*.meta
